--- a/waybar/config
+++ b/waybar/config
@@ -1,8 +1,27 @@
 {
   "layer": "top",
   "position": "top",
+  "height": 32,
+  "width": 1860,
   "modules-left": ["clock"],
   "modules-center": ["sway/workspaces"],
+  "modules-right": ["cpu", "custom/gpu", "memory"],
+
+  "cpu": {
+    "interval": 2,
+    "format": "cpu: {usage}%"
+  },
+
+  "memory": {
+    "interval": 2,
+    "format": "ram: {used:0.1f}G / {total:0.1f}G"
+  },
+
+  "custom/gpu": {
+    "exec": "nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits",
+    "interval": 2,
+    "format": "gpu: {}%"
+  },
 
   "sway/workspaces": {
     "disable-scroll": true,
